Rework `CoverageDatabase` internals (#546)
Instead of a single map keyed by `SourceLocation`, use a map per resource, identified by URI.

Avoid `SourceName` except for short-term compatibility of `sourceNames()`.